--- a/agrobiznis.html
+++ b/agrobiznis.html
@@ -259,7 +259,7 @@
             ruralnim područjima.
           </p>
           <div class="button-container">
-            <a href="kontakt.html" class="contact-button roboto-medium"
+            <a href="kontakt" class="contact-button roboto-medium"
               >Kontaktirajte me</a
             >
           </div>
