--- a/cookie-banner.html
+++ b/cookie-banner.html
@@ -3,8 +3,8 @@
   <div class="banner-content">
     <p>
       Koristimo kolačiće za analizu prometa i poboljšanje korisničkog iskustva.
-      <a href="privacy-policy.html">Politika privatnosti</a> |
-      <a href="cookie-policy.html">Politika kolačića</a>
+      <a href="privacy-policy">Politika privatnosti</a> |
+      <a href="cookie-policy">Politika kolačića</a>
     </p>
     <div class="buttons">
       <button id="reject-cookies">Odbij sve osim nužnih</button>
