--- a/financijsko.html
+++ b/financijsko.html
@@ -58,7 +58,7 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/report.png"
+                  src="photos/services-icons/report.png"
                   alt="Financiranje i subvencije"
                   class="service-icon"
                 />
@@ -79,7 +79,7 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/financial-forecast.png"
+                  src="photos/services-icons/financial-forecast.png"
                   alt="Financial forecast"
                   class="service-icon"
                 />
@@ -99,7 +99,11 @@
 
             <div class="service-card-service-page">
               <div class="service-header-service-page">
-                <img src="photos/bond.png" alt="Bond" class="service-icon" />
+                <img
+                  src="photos/services-icons/bond.png"
+                  alt="Bond"
+                  class="service-icon"
+                />
                 <h3 class="service-title-service-page roboto-light">
                   Savjetovanje o izdavanju obveznica
                 </h3>
@@ -117,7 +121,7 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/financial-risk.png"
+                  src="photos/services-icons/financial-risk.png"
                   alt="Financial risk"
                   class="service-icon"
                 />
@@ -140,7 +144,7 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/understand.png"
+                  src="photos/services-icons/understand.png"
                   alt="Mergers and Acquisitions"
                   class="service-icon"
                 />
@@ -173,7 +177,7 @@
             stratešku inovaciju i ekološku odgovornost.
           </p>
           <div class="button-container">
-            <a href="kontakt.html" class="contact-button roboto-medium"
+            <a href="kontakt" class="contact-button roboto-medium"
               >Kontaktirajte me</a
             >
           </div>
