--- a/footer.html
+++ b/footer.html
@@ -2,13 +2,16 @@
   <div class="footer-content">
     <!-- Left: Brand, Policies, LinkedIn -->
     <div class="footer-col footer-brandpolicies">
-      <a href="index.html" class="footer-title roboto-light">
+      <a
+        href="https://striga-savjetovanje.com"
+        class="footer-title roboto-light"
+      >
         Štriga poslovno savjetovanje
       </a>
       <div class="footer-policies-linkedin">
         <div class="footer-policies roboto-light">
-          <a href="privacy-policy.html">Politika privatnosti</a>
-          <a href="cookie-policy.html">Politika kolačića</a>
+          <a href="privacy-policy">Politika privatnosti</a>
+          <a href="cookie-policy">Politika kolačića</a>
         </div>
         <a
           href="https://www.linkedin.com/in/tajanastriga/?originalSubdomain=hr"
@@ -41,14 +44,14 @@
       aria-label="Footer Navigation"
     >
       <div class="footer-links-group a">
-        <a href="o-meni.html">O meni</a>
-        <a href="blog-archive.html">Blog</a>
-        <a href="kontakt.html">Kontakt</a>
+        <a href="o-nama.html">O meni</a>
+        <a href="blog-archive">Blog</a>
+        <a href="kontakt">Kontakt</a>
       </div>
       <div class="footer-links-group b">
-        <a href="financijsko.html">Financijsko savjetovanje</a>
-        <a href="stratesko.html">Strateško savjetovanje</a>
-        <a href="agrobiznis.html">Agrobiznis i održivi razvoj</a>
+        <a href="financijsko">Financijsko savjetovanje</a>
+        <a href="stratesko">Strateško savjetovanje</a>
+        <a href="agrobiznis">Agrobiznis i održivi razvoj</a>
       </div>
     </nav>
     <!-- Right: Info -->
