--- a/header.html
+++ b/header.html
@@ -1,17 +1,17 @@
 <div class="page-header">
   <div class="header-container">
     <div class="page-title">
-      <a href="index.html">
+      <a href="https://striga-savjetovanje.com">
         <h1 class="roboto-light">Štriga poslovno savjetovanje</h1>
       </a>
     </div>
     <nav class="page-navigation" id="page-navigation">
-      <a href="o-nama.html"
-        ><h3 class="roboto-medium" id="usluge-link">O MENI</h3></a
-      >
+      <a href="o-nama">
+        <h3 class="roboto-medium" id="usluge-link">O MENI</h3>
+      </a>
 
       <div class="dropdown">
-        <a href="usluge.html">
+        <a href="usluge">
           <h3 class="roboto-medium">
             USLUGE
             <svg
@@ -26,21 +26,18 @@
           </h3>
         </a>
         <div class="dropdown-content">
-          <a class="roboto-light" href="financijsko.html"
+          <a class="roboto-light" href="financijsko"
             >Financijsko savjetovanje</a
           >
-          <a class="roboto-light" href="stratesko.html"
-            >Strateško savjetovanje</a
-          >
-
-          <a class="roboto-light" href="agrobiznis.html"
+          <a class="roboto-light" href="stratesko">Strateško savjetovanje</a>
+          <a class="roboto-light" href="agrobiznis"
             >Agrobiznis i održivi razvoj</a
           >
         </div>
       </div>
 
-      <a href="blog-archive.html"><h3 class="roboto-medium">BLOG</h3></a>
-      <a href="kontakt.html"><h3 class="roboto-medium">KONTAKT</h3></a>
+      <a href="blog-archive"><h3 class="roboto-medium">BLOG</h3></a>
+      <a href="kontakt"><h3 class="roboto-medium">KONTAKT</h3></a>
     </nav>
   </div>
 </div>
