--- a/index.html
+++ b/index.html
@@ -74,9 +74,12 @@
             </div>
           </div>
           <div class="services-cards-container">
-            <a href="financijsko.html" class="service-card">
+            <a href="financijsko" class="service-card">
               <div class="service-card-image">
-                <img src="photos/profit.png" alt="Profit Image" />
+                <img
+                  src="photos/services-icons/profit.png"
+                  alt="Profit Image"
+                />
               </div>
               <div class="service-card-title roboto-light">
                 Financijsko savjetovanje
@@ -88,9 +91,12 @@
                 <p>Upravljanje rizicima</p>
               </div>
             </a>
-            <a href="stratesko.html" class="service-card">
+            <a href="stratesko" class="service-card">
               <div class="service-card-image">
-                <img src="photos/strategy.png" alt="Strategy Image" />
+                <img
+                  src="photos/services-icons/strategy.png"
+                  alt="Strategy Image"
+                />
               </div>
               <div class="service-card-title roboto-light">
                 Strateško savjetovanje
@@ -102,9 +108,9 @@
                 <p>Strateško planiranje i operativna optimizacija</p>
               </div>
             </a>
-            <a href="agrobiznis.html" class="service-card">
+            <a href="agrobiznis" class="service-card">
               <div class="service-card-image">
-                <img src="photos/coin.png" alt="Coin Image" />
+                <img src="photos/services-icons/coin.png" alt="Coin Image" />
               </div>
               <div class="service-card-title roboto-light">
                 Agrobiznis i ruralni razvoj
@@ -159,7 +165,7 @@
             možemo pomoći vašem poslovanju da raste i napreduje.
           </p>
           <div class="button-container">
-            <a href="kontakt.html" class="contact-button roboto-medium"
+            <a href="kontakt" class="contact-button roboto-medium"
               >Kontaktirajte me</a
             >
           </div>
