--- a/o-nama.html
+++ b/o-nama.html
@@ -141,7 +141,7 @@
             <div class="why-us-content">
               <div class="why-us-item roboto-light">
                 <div class="why-us-item-image">
-                  <img src="photos/test.png" />
+                  <img src="photos/services-icons/test.png" />
                 </div>
                 <div class="why-us-item-title">Rezultati na prvom mjestu</div>
                 Vaš uspjeh moj je prioritet. Zajedno radimo na rješenjima koja
@@ -150,7 +150,7 @@
               </div>
               <div class="why-us-item roboto-light">
                 <div class="why-us-item-image">
-                  <img src="photos/handshake.png" />
+                  <img src="photos/services-icons/handshake.png" />
                 </div>
                 <div class="why-us-item-title">Dugoročna suradnja</div>
                 Više od jednokratnih projekata, vjerujem u izgradnju odnosa
@@ -160,7 +160,7 @@
               </div>
               <div class="why-us-item roboto-light">
                 <div class="why-us-item-image">
-                  <img src="photos/measuring-tape.png" />
+                  <img src="photos/services-icons/measuring-tape.png" />
                 </div>
                 <div class="why-us-item-title">Pristup po vašoj mjeri</div>
                 Svaki klijent i svaki projekt su jedinstveni, i tako im
@@ -181,7 +181,7 @@
             temelje za vaš dugoročni uspjeh.
           </p>
           <div class="button-container">
-            <a href="kontakt.html" class="contact-button roboto-medium"
+            <a href="kontakt" class="contact-button roboto-medium"
               >Kontaktirajte me</a
             >
           </div>
