--- a/stratesko.html
+++ b/stratesko.html
@@ -63,7 +63,7 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/financial.png"
+                  src="photos/services-icons/financial.png"
                   alt="Business planning"
                   class="service-icon"
                 />
@@ -85,7 +85,7 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/operation.png"
+                  src="photos/services-icons/operation.png"
                   alt="Strategic planning"
                   class="service-icon"
                 />
@@ -106,7 +106,7 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/analysis.png"
+                  src="photos/services-icons/analysis.png"
                   alt="Market and competition analysis"
                   class="service-icon"
                 />
@@ -126,7 +126,7 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/management.png"
+                  src="photos/services-icons/management.png"
                   alt="Change management and organizational transformation"
                   class="service-icon"
                 />
@@ -147,7 +147,7 @@
             <div class="service-card-service-page">
               <div class="service-header-service-page">
                 <img
-                  src="photos/understand.png"
+                  src="photos/services-icons/understand.png"
                   alt="Mergers and Acquisitions"
                   class="service-icon"
                 />
@@ -180,7 +180,7 @@
             stratešku inovaciju i ekološku odgovornost.
           </p>
           <div class="button-container">
-            <a href="kontakt.html" class="contact-button roboto-medium"
+            <a href="kontakt" class="contact-button roboto-medium"
               >Kontaktirajte me</a
             >
           </div>
