--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               rast, širenje i dugoročni uspjeh.
             </p>
           </div>
-          <a class="profile-a roboto-light shake-top" href="o-nama.html"
+          <a class="profile-a roboto-light shake-top" href="o-nama"
             >Saznajte više
           </a>
         </div>
