--- a/footer.html
+++ b/footer.html
@@ -44,7 +44,7 @@
       aria-label="Footer Navigation"
     >
       <div class="footer-links-group a">
-        <a href="o-nama.html">O meni</a>
+        <a href="o-nama">O meni</a>
         <a href="blog-archive">Blog</a>
         <a href="kontakt">Kontakt</a>
       </div>
