Fixes, icon logo etc

--- a/index.html
+++ b/index.html
@@ -18,14 +18,11 @@
       property="og:description"
       content="Financijski i poslovni savjeti za poduzeća i obrte u Hrvatskoj."
     />
-    <meta
-      property="og:image"
-      content="https://striga-savjetovanje.com/images/og-image.jpg"
-    />
+    <meta property="og:image" content="photos/striga-savjetovanje logo3.png" />
     <meta property="og:url" content="https://striga-savjetovanje.com/" />
     <meta property="og:type" content="website" />
 
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="photos/striga-savjetovanje logo3.png" />
     <link rel="stylesheet" href="indexCSS/page-header.css" />
     <link rel="stylesheet" href="indexCSS/font.css" />
     <link rel="stylesheet" href="indexCSS/page-footer.css" />
