--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -23,7 +23,7 @@
 
     <main>
       <section class="policy-section">
-        <h1 class="policy-title">Politika kolačića</h1>
+        <h1 class="policy-title">Pravila kolačića</h1>
         <div class="policy-content">
           <p>
             Ova stranica koristi kolačiće kako bi poboljšala funkcionalnost i
@@ -58,9 +58,9 @@
               >ovdje</a
             >.
           </p>
-          <h2>5. Promjene politike kolačića</h2>
+          <h2>5. Promjene pravila kolačića</h2>
           <p>
-            Ova politika može biti povremeno ažurirana. Sve promjene bit će
+            Ova pravila mogu biti povremeno ažurirana. Sve promjene bit će
             objavljene na ovoj stranici.
           </p>
         </div>
