--- a/footer.html
+++ b/footer.html
@@ -1,73 +1,76 @@
-<footer class="page-footer">
-  <div class="footer-content">
-    <!-- Left: Brand, Policies, LinkedIn -->
-    <div class="footer-col footer-brandpolicies">
+<div class="footer-content">
+  <div class="footer-col footer-brandpolicies">
+    <a href="https://striga-savjetovanje.com" class="footer-title roboto-light">
+      Štriga poslovno savjetovanje
+    </a>
+    <div class="footer-policies-linkedin">
+      <div class="footer-policies roboto-light">
+        <a href="privacy-policy">Pravila privatnosti</a>
+        <a href="cookie-policy">Pravila kolačića</a>
+      </div>
+    </div>
+  </div>
+  <nav
+    class="footer-col footer-nav roboto-light"
+    aria-label="Footer Navigation"
+  >
+    <div class="footer-links-group a">
+      <a href="financijsko">Financijsko savjetovanje</a>
+      <a href="stratesko">Strateško savjetovanje</a>
+      <a href="agrobiznis">Agrobiznis i održivi razvoj</a>
+    </div>
+    <div class="footer-links-group b">
+      <a href="o-nama">O meni</a>
+      <a href="blog-archive">Blog</a>
+      <a href="kontakt">Kontakt</a>
       <a
-        href="https://striga-savjetovanje.com"
-        class="footer-title roboto-light"
+        href="https://www.linkedin.com/in/tajanastriga/?originalSubdomain=hr"
+        target="_blank"
+        rel="noopener"
+        class="linkedin-btn"
+        aria-label="LinkedIn"
       >
-        Štriga poslovno savjetovanje
+        <svg width="1.5em" height="1.5em" viewBox="0 0 32 32" fill="none">
+          <text
+            x="16"
+            y="16"
+            text-anchor="middle"
+            dominant-baseline="middle"
+            font-family="Arial, Helvetica, sans-serif"
+            font-size="22"
+            font-weight="bold"
+          >
+            in
+          </text>
+        </svg>
       </a>
-      <div class="footer-policies-linkedin">
-        <div class="footer-policies roboto-light">
-          <a href="privacy-policy">Politika privatnosti</a>
-          <a href="cookie-policy">Politika kolačića</a>
-        </div>
-        <a
-          href="https://www.linkedin.com/in/tajanastriga/?originalSubdomain=hr"
-          target="_blank"
-          rel="noopener"
-          class="linkedin-btn"
-          aria-label="LinkedIn"
-        >
-          <svg width="1.5em" height="1.5em" viewBox="0 0 32 32" fill="none">
-            <text
-              x="16"
-              y="16"
-              text-anchor="middle"
-              dominant-baseline="middle"
-              font-family="Arial, Helvetica, sans-serif"
-              font-size="22"
-              font-weight="bold"
-              fill="white"
-            >
-              in
-            </text>
-          </svg>
-        </a>
-      </div>
     </div>
-    <div class="footer-divider"></div>
-    <!-- Center: Navigation -->
-    <nav
-      class="footer-col footer-nav roboto-light"
-      aria-label="Footer Navigation"
-    >
-      <div class="footer-links-group a">
-        <a href="o-nama">O meni</a>
-        <a href="blog-archive">Blog</a>
-        <a href="kontakt">Kontakt</a>
-      </div>
-      <div class="footer-links-group b">
-        <a href="financijsko">Financijsko savjetovanje</a>
-        <a href="stratesko">Strateško savjetovanje</a>
-        <a href="agrobiznis">Agrobiznis i održivi razvoj</a>
-      </div>
-    </nav>
-    <!-- Right: Info -->
-    <div class="footer-divider"></div>
-    <div class="footer-col footer-info roboto-light">
-      <span><b>OIB:</b> 24689046575</span>
-      <span><b>Osnivač:</b> Tajana Štriga</span>
-      <span><b>Datum osnivanja:</b> 11.01.2018.</span>
-      <span
-        ><b>Djelatnost:</b> 7022 - Savjetovanje u vezi s poslovanjem i ostalim
-        upravljanjem</span
+  </nav>
+
+  <!-- Back to Top Button Column -->
+  <div class="footer-col footer-totop">
+    <button class="to-top-btn" aria-label="Back to top">
+      <svg
+        class="to-top-icon"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+        fill="none"
       >
-    </div>
+        <path
+          class="to-top-arrow"
+          d="M7 14l5-5 5 5"
+          stroke="#cdd9e8"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        ></path>
+      </svg>
+    </button>
   </div>
-  <div class="footer-line"></div>
-  <div class="copyright roboto-light">
-    <p>© 2018 Štriga poslovno savjetovanje | All Rights Reserved</p>
-  </div>
-</footer>
+</div>
+<!-- Divider & Copyright -->
+<div class="footer-line"></div>
+<div class="copyright roboto-light">
+  <p>© 2018 Štriga poslovno savjetovanje | All Rights Reserved</p>
+</div>
