--- a/index.html
+++ b/index.html
@@ -11,18 +11,21 @@
     />
     <meta
       name="keywords"
-      content="financijsko savjetovanje, poslovno savjetovanje, strateško savjetovanje, Zagreb, Hrvatska, obveznice, EU, poticaji, financijski blog"
+      content="Tajana Štriga, savjetovanje, poslovno savjetovanje, strateško savjetovanje, Zagreb, Hrvatska, obveznice, EU, poticaji, financijski blog"
     />
     <meta property="og:title" content="Štriga poslovno savjetovanje" />
     <meta
       property="og:description"
       content="Financijski i poslovni savjeti za poduzeća i obrte u Hrvatskoj."
     />
-    <meta property="og:image" content="photos/striga-savjetovanje logo3.png" />
+    <meta
+      property="og:image"
+      content="https://striga-savjetovanje.com/images/og-image.jpg"
+    />
     <meta property="og:url" content="https://striga-savjetovanje.com/" />
     <meta property="og:type" content="website" />
 
-    <link rel="icon" href="photos/striga-savjetovanje logo3.png" />
+    <link rel="icon" href="/favicon.ico" />
     <link rel="stylesheet" href="indexCSS/page-header.css" />
     <link rel="stylesheet" href="indexCSS/font.css" />
     <link rel="stylesheet" href="indexCSS/page-footer.css" />
