--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -23,19 +23,19 @@
 
     <main>
       <section class="policy-section">
-        <h1 class="policy-title">Politika privatnosti</h1>
+        <h1 class="policy-title">Pravila privatnosti</h1>
         <div class="policy-content">
           <p>
             <strong>Štriga poslovno savjetovanje</strong> poštuje vašu
             privatnost i obvezuje se čuvati povjerljivost vaših osobnih
-            podataka. Ova Politika privatnosti objašnjava koje podatke
+            podataka. Ova pravila privatnosti objašnjava koje podatke
             prikupljamo, kako ih koristimo i koja su vaša prava.
           </p>
           <h2>1. Tko smo mi?</h2>
           <p>
             Štriga poslovno savjetovanje<br />
             (striga-savjetovanje.com)<br />
-            Kontakt: hello@loremipsum.com
+            Kontakt: tajana@striga-savjetovanje.com
           </p>
           <h2>2. Koje podatke prikupljamo?</h2>
           <ul>
@@ -44,7 +44,7 @@
               e-mail adresa, kontakt broj, poruka).
             </li>
             <li>
-              Podatke o korištenju web stranice putem kolačića (vidi Politiku
+              Podatke o korištenju web stranice putem kolačića (vidi Pravila
               kolačića).
             </li>
           </ul>
@@ -73,9 +73,9 @@
             Poduzimamo odgovarajuće tehničke i organizacijske mjere za zaštitu
             vaših podataka.
           </p>
-          <h2>7. Promjene politike</h2>
+          <h2>7. Promjene pravila</h2>
           <p>
-            Ova politika može biti povremeno ažurirana. Sve promjene bit će
+            Ova pravila mogu biti povremeno ažurirana. Sve promjene bit će
             objavljene na ovoj stranici.
           </p>
         </div>
