--- a/header.html
+++ b/header.html
@@ -11,7 +11,7 @@
       </a>
 
       <div class="dropdown">
-        <a>
+        <a href="javascript:void(0)">
           <h3 class="roboto-medium">
             USLUGE
             <svg
