Fix mobile menu icon sync; prevent sticky focus on Back-to-Top; refine mobile dropdown behavior and style

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <meta
       name="keywords"
-      content="Tajana Štriga, savjetovanje, poslovno savjetovanje, strateško savjetovanje, Zagreb, Hrvatska, obveznice, EU, poticaji, financijski blog"
+      content="Tajana Štriga, savjetovanje, poslovno savjetovanje, strateško savjetovanje, Zagreb, Hrvatska, obveznice, EU, poticaji, financijski blog, agrobiznis, planiranje"
     />
     <meta property="og:title" content="Štriga poslovno savjetovanje" />
     <meta
